--- a/robo_shop.ansible/roles/catalogue/templates/catalogue.service.j2
+++ b/robo_shop.ansible/roles/catalogue/templates/catalogue.service.j2
@@ -8,8 +8,8 @@ Environment=CATALOGUE_SERVER_PORT=8082
 
 
 
-Environment=MONGO_URL="mongodb://{{mongodb_host}}:27017/catalogue" 
-ExecStart="/bin/node /app/{{service}}/server.js"
+Environment=MONGO_URL=mongodb://{{mongodb_host}}:27017/catalogue
+ExecStart=/bin/node /app/{{service}}/server.js
 SyslogIdentifier=catalogue
 
 [Install]
