Added Code to Install Java and Maven

--- a/robo_shop.ansible/roles/shipping/templates/shipping.service.j2
+++ b/robo_shop.ansible/roles/shipping/templates/shipping.service.j2
@@ -7,10 +7,10 @@ Environment=SERVER_PORT=8084
 
 
 
-Environment=CART_ENDPOINT="{{cart_host}}":8083
+Environment=CART_ENDPOINT={{cart_host}}:8083
 
 #use mysql host value
-Environment=DB_HOST="{{mysql_host}}" 
+Environment=DB_HOST={{mysql_host}}
 
 ExecStart=/bin/java -jar /app/{{service}}/shipping.jar
 SyslogIdentifier=shipping
