--- a/robo_shop.ansible/roles/web/templates/roboshop.conf.j2
+++ b/robo_shop.ansible/roles/web/templates/roboshop.conf.j2
@@ -2,7 +2,7 @@ proxy_http_version 1.1;
 location /images/ {
   expires 5s;
   root   /usr/share/nginx/html;
-  try_files \$uri /images/placeholder.jpg;
+  try_files $uri /images/placeholder.jpg;
 }
 
 
